Add readme and assets

--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
       media="all"
       href="/stylesheets/application.css"
     />
-    <script src="/stylesheets/application.js"></script>
+    <script src="/javascripts/application.js"></script>
     <link
       rel="stylesheet"
       media="screen"
-      href="/css.css?css=https%3A%2F%2Fstatic.zipmoney.com.au%2Fhpp%2Fhpp.fz.v1.css"
+      href="/stylesheets/hpp.fz.v1.css"
     />
   </head>
   <body class="payment v2 iframe" id="payment-show">
