--- a/PlainVersion/public/index.html
+++ b/PlainVersion/public/index.html
@@ -11,7 +11,7 @@
       name="csrf-token"
       content="pj901Tn8o4uD/FJSNQe3a8dSEk45s26h1OtAnamX4kJAW6MVrIZaK6Wlojl+NwWQwSDRrWeFcQp/9rglTVSIJQ=="
     />
-    <link
+    <!-- <link
       rel="stylesheet"
       media="screen"
       href="/stylesheets/style.css"
@@ -25,8 +25,11 @@
       rel="stylesheet"
       media="all"
       href="/stylesheets/application.css"
-    />
+    /> -->
     <script src="/javascripts/application.js"></script>
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
   </head>
   <body class="payment v2 iframe" id="payment-show">
     <script>
@@ -52,6 +55,15 @@
       ga("create", "UA-28323186-6", "auto", "pmnts");
       ga("pmnts.send", "pageview");
     </script>
+    <script>
+      mdc.textfield.MDCTextField.attachTo(document.querySelector('.username'));
+    </script>
+
+  <div class="mdc-text-field username">
+    <input type="text" class="mdc-text-field__input" id="username-input" name="username" required>
+    <label class="mdc-floating-label" for="username-input">Username</label>
+    <div class="mdc-line-ripple"></div>
+  </div>
 
     <div class="container">
       <div class="row">
