--- a/MDCVersion/index.html
+++ b/MDCVersion/index.html
@@ -89,7 +89,7 @@
             />
             <div id="card">
               <fieldset>
-                <div class="control-group">
+                <div class="control-group-holder">
                   <div class="controls control-container">
                     <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon mdc-card-holder">
                       <input
@@ -154,7 +154,6 @@
                           type="text"
                           required
                           class="expiry-date mdc-text-field__input"
-                          onfocus="this.placeholder='MM/YYYY'"
                           autocomplete="cc-exp"
                           name="payment_request[expiry_date]"
                           id="payment_request_expiry_date"
