--- a/MDCVersion/index.html
+++ b/MDCVersion/index.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="control-group payment_form-mh">
                   <div class="two-column-row">
-                    <div>
+                    <div class="mdc-expiry-date-column">
                       <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon mdc-expiry-date">
                         <input
                           type="text"
@@ -171,7 +171,8 @@
                         <div class="mdc-text-field-helper-text mdc-text-field-helper-text--validation-msg mdc-expiry-date-text">Valid date required</div>
                       </div>
                     </div>
-                    <div>
+                    <div class="mdc-split"></div>
+                    <div class="mdc-security-code-column">
                       <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--with-trailing-icon mdc-security-code">
                         <input
                           type="text"
