Use error instead of info icon

--- a/MDCVersion/index.html
+++ b/MDCVersion/index.html
@@ -102,7 +102,7 @@
                         name="payment_request[card_holder]"
                         id="payment_request_card_holder"
                       />
-                      <i class="material-icons mdc-text-field__icon mdc-card-holder-icon display-none">info_outline</i>
+                      <i class="material-icons mdc-text-field__icon mdc-card-holder-icon display-none">error_outline</i>
                       <div class="mdc-notched-outline">
                         <div class="mdc-notched-outline__leading"></div>
                         <div class="mdc-notched-outline__notch">
@@ -129,7 +129,7 @@
                         name="payment_request[card_number]"
                         id="payment_request_card_number"
                       />
-                      <i class="material-icons mdc-text-field__icon mdc-card-number-icon display-none">info_outline</i>
+                      <i class="material-icons mdc-text-field__icon mdc-card-number-icon display-none">error_outline</i>
                       <i class="material-icons mdc-text-field__icon mdc-card-number-img display-none">
                         <img class="mdc-card-number-icon__img" src='/assets/card-visa-5f8a240d56bca7d914a57f03c7a3be261cae8ee1ef43f444e181a4d1cb47a962.svg' />
                       </i>
@@ -158,7 +158,7 @@
                           name="payment_request[expiry_date]"
                           id="payment_request_expiry_date"
                         />
-                        <i class="material-icons mdc-text-field__icon mdc-expiry-date-icon display-none">info_outline</i>
+                        <i class="material-icons mdc-text-field__icon mdc-expiry-date-icon display-none">error_outline</i>
                         <div class="mdc-notched-outline">
                           <div class="mdc-notched-outline__leading"></div>
                           <div class="mdc-notched-outline__notch">
@@ -184,7 +184,7 @@
                           name="payment_request[security_code]"
                           id="payment_request_security_code"
                         />
-                        <i class="material-icons mdc-text-field__icon mdc-security-code-icon display-none">info_outline</i>
+                        <i class="material-icons mdc-text-field__icon mdc-security-code-icon display-none">error_outline</i>
                         <div class="mdc-notched-outline">
                           <div class="mdc-notched-outline__leading"></div>
                           <div class="mdc-notched-outline__notch">
