Add title to card number and expiry date

--- a/MDCVersion/index.html
+++ b/MDCVersion/index.html
@@ -124,6 +124,7 @@
                         required
                         class="required card-type card-number card-number-logo mdc-text-field__input"
                         autocomplete="cc-number"
+                        title="Please enter a valid card number"
                         minlength="13"
                         maxlength="19"
                         name="payment_request[card_number]"
@@ -154,6 +155,7 @@
                           type="text"
                           required
                           class="expiry-date mdc-text-field__input"
+                          title="Please enter a valid expiry date"
                           autocomplete="cc-exp"
                           name="payment_request[expiry_date]"
                           id="payment_request_expiry_date"
